--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@faker-js/faker": "^9.1.0",
     "@fontsource/roboto": "^5.1.0",
     "@mui/material": "^6.1.5",
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^9.15.0",
     "install": "^0.13.0",
     "npm": "^10.9.0",
