--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@faker-js/faker": "^9.1.0",
     "@fontsource/roboto": "^5.1.0",
     "@mui/material": "^6.1.5",
+    "@reduxjs/toolkit": "^2.4.0",
     "dotenv": "^16.4.5",
     "dotenv-webpack": "^8.1.0",
     "eslint": "^9.15.0",
@@ -24,6 +25,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.6",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
